Fixed Logo Alignment Issue

--- a/assets/base.css
+++ b/assets/base.css
@@ -2546,7 +2546,8 @@ input[type='checkbox'] {
 
 .header__heading-logo-wrapper {
   width: 100%;
-  display: inline-block;
+  align-items: center;
+  display: flex;
   transition: width 0.3s cubic-bezier(0.52, 0, 0.61, 0.99);
 }
 
